dashboard, gestion des users, gestion d'un user, apercu des messages de contac, lecture et reponse à un message. A verif

--- a/documents/email1.html
+++ b/documents/email1.html
@@ -5,11 +5,11 @@
 
             <h1>Site de jeux et activités pour enfants</h1>
 
-            <p>Bonjour, <span style="text-transform:uppercase">petitgros@lala.fr responsable de Liam</span>
+            <p>Bonjour, <span style="text-transform:uppercase">titoun@chat.fr responsable de Lilo</span>
 
             <p>Votre demande d'accès au site a bien été enregistrée.</p>
-            <p>Votre mot de passe temporaire est : <strong>xEfT^CGc9FY1</strong></p>
-            <p>Email : <strong>petitgros@lala.fr</strong></p>
+            <p>Votre mot de passe temporaire est : <strong>&cji1Eo-Bw9!</strong></p>
+            <p>Email : <strong>titoun@chat.fr</strong></p>
             <p style="color: rgb(255, 0, 0); font-size: 24px;">Nous vous conseillons de le changer rapidement !</p>
     
             <p>Respectez bien les majuscules et les minuscules.<br />
