page admin de gestion d'un utilisateur ok et fonctionnelle, page profile user à revoir,page admin de gestion des utilisateur voir le searchUser, page admin de gestion des messages ok et fonctionnellepage contact ok fonctionnelle, css à faire, page dashboard css à faire

--- a/documents/email1.html
+++ b/documents/email1.html
@@ -1,21 +1,27 @@
-<html>
-    <body>
-        <div style="font-size: 24px; text-align: center">
-            <img src="assets/img/Miaou/chatfiligranne.jpg" alt="logo du site"/>
 
-            <h1>Site de jeux et activités pour enfants</h1>
-
-            <p>Bonjour, <span style="text-transform:uppercase">titoun@chat.fr responsable de Lilo</span>
-
-            <p>Votre demande d'accès au site a bien été enregistrée.</p>
-            <p>Votre mot de passe temporaire est : <strong>&cji1Eo-Bw9!</strong></p>
-            <p>Email : <strong>titoun@chat.fr</strong></p>
-            <p style="color: rgb(255, 0, 0); font-size: 24px;">Nous vous conseillons de le changer rapidement !</p>
-    
-            <p>Respectez bien les majuscules et les minuscules.<br />
-            Votre compte n'est pas encore activé. Vous devez vous connectez et modifier votre mot de passe.</p>
-
-            <img src="assets/img/Miaou/chatfiligranne.jpg" alt="logo du site"/>
-        </div>
-    </body>
-</html>
+        <html>
+            <body style="width: 550px">
+            
+            </style>
+            <div class="header">
+                <img src="cid:logo_miaou" style="width: 550px"/>
+            </div>
+                <div >
+                    <p style="margin-top: 80px; text-align: center">Bonjour,</p>
+                    <p style="text-align: justify">Votre demande d'accès au site pour <strong>Milo</strong> a bien été enregistrée. Votre mot de passe temporaire est : <strong>Y5fslmwLb06#</strong></p>
+                    <p>Votre email de connexion: <strong>laure.bonnevalle@3wa.io</strong></p>
+                    <p style="color: #FF33FF; font-size: 18px;">Votre compte n'est pas encore activé. Vous devez vous connecter et modifier votre mot de passe pour activer votre compte.</p>
+                    <p>Respectez bien les majuscules et les minuscules.<br />
+                    </p>
+                    <a href:"http://
+                </div>
+            <div style="background-color:#f1f1f1; padding:15px; text-align:center; font-size:14px; color:#555;">
+            <p>👉 Accédez à votre compte ici : <a href="https://apprendreavecmiaou.alwaysdata.net/index.php?route=login" 
+               style="color:#FF33FF; text-decoration:underline">
+               Se connecter
+            </a>
+        </p>
+        <p>&copy; 2025 Apprendre avec Miaou</p>
+    </div>
+            </body>
+        </html>
