Page profile fonctionnelle modif profil toggle newsletter formulaire contact rest password ok et scss ok sauf titre et top margin

--- a/documents/email_reset_2025-12-08_03-49-40.html
+++ b/documents/email_reset_2025-12-08_03-49-40.html
@@ -5,9 +5,9 @@
                 <img src="cid:logo_miaou" style="width: 550px"/>
             </div>
             <div >
-                <p style="margin-top: 10px; text-align: center">Bonjour Hugo</p>
+                <p style="margin-top: 10px; text-align: center">Bonjour Noah</p>
                 <p style="text-align: justify"><strong>🔒 Votre mot de passe a été réinitialisé</strong></p>
-                    <p>Votre nouveau mot de passe temporaire est: <strong>g3S2g*Q*PES$</strong>
+                    <p>Votre nouveau mot de passe temporaire est: <strong>vVdP7GT#7$il</strong>
                     </p>
                     <p>Votre email de connexion:<strong> laure.bonnevalle@3wa.io</strong></p>
                 </div>
