--- a/documents/email1.html
+++ b/documents/email1.html
@@ -7,21 +7,21 @@
                 <img src="cid:logo_miaou" style="width: 550px"/>
             </div>
                 <div >
-                    <p style="margin-top: 80px; text-align: center">Bonjour,</p>
-                    <p style="text-align: justify">Votre demande d'accès au site pour <strong>Milo</strong> a bien été enregistrée. Votre mot de passe temporaire est : <strong>Y5fslmwLb06#</strong></p>
+                    <p style="margin-top: 10px; text-align: center">Bonjour,</p>
+                    <p style="text-align: justify">Votre demande d'accès au site pour <strong>Noah</strong> a bien été enregistrée. Votre mot de passe temporaire est : <strong>C0fziH-6b6oK</strong></p>
                     <p>Votre email de connexion: <strong>laure.bonnevalle@3wa.io</strong></p>
                     <p style="color: #FF33FF; font-size: 18px;">Votre compte n'est pas encore activé. Vous devez vous connecter et modifier votre mot de passe pour activer votre compte.</p>
                     <p>Respectez bien les majuscules et les minuscules.<br />
                     </p>
                     <a href:"http://
                 </div>
-            <div style="background-color:#f1f1f1; padding:15px; text-align:center; font-size:14px; color:#555;">
-            <p>👉 Accédez à votre compte ici : <a href="https://apprendreavecmiaou.alwaysdata.net/index.php?route=login" 
-               style="color:#FF33FF; text-decoration:underline">
-               Se connecter
-            </a>
-        </p>
-        <p>&copy; 2025 Apprendre avec Miaou</p>
-    </div>
+            <div class=footer style="background-color:#f1f1f1; padding:15px; text-align:center; font-size:14px; color:#555;">
+                <p>👉 Accédez à votre compte ici : <a href="https://apprendreavecmiaou.alwaysdata.net/index.php?route=login" 
+                style="color:#FF33FF; text-decoration:underline">
+                Se connecter
+                </a>
+                </p>
+                <p>&copy; 2025 Apprendre avec Miaou</p>
+            </div>
             </body>
         </html>
