--- a/documents/email_reset_2025-12-06_22-27-32.html
+++ b/documents/email_reset_2025-12-06_22-27-32.html
@@ -5,11 +5,11 @@
                 <img src="cid:logo_miaou" style="width: 550px"/>
             </div>
             <div >
-                <p style="margin-top: 10px; text-align: center">Bonjour Hugo</p>
+                <p style="margin-top: 10px; text-align: center">Bonjour,</p>
                 <p style="text-align: justify"><strong>🔒 Votre mot de passe a été réinitialisé</strong></p>
-                    <p>Votre nouveau mot de passe temporaire est: <strong>g3S2g*Q*PES$</strong>
+                    <p>Votre nouveau mot de passe temporaire est: <strong>J6lrnro&amp;g?c1</strong>
                     </p>
-                    <p>Votre email de connexion:<strong> laure.bonnevalle@3wa.io</strong></p>
+                    <p>Votre email de connexion:<strong> petitgros@lala.fr</strong></p>
                 </div>
                 <p style="color: #FF33FF; font-size: 18px;">Votre compte est désactivé. Vous devez vous connecter et modifier votre mot de passe pour réactiver votre compte.</p>
                     <p>Respectez bien les majuscules et les minuscules.<br />
