Page Memo ok et jeu fonctionnel

--- a/documents/email1.html
+++ b/documents/email1.html
@@ -8,8 +8,8 @@
             </div>
                 <div >
                     <p style="margin-top: 10px; text-align: center">Bonjour,</p>
-                    <p style="text-align: justify">Votre demande d'accès au site pour <strong>Noah</strong> a bien été enregistrée. Votre mot de passe temporaire est : <strong>C0fziH-6b6oK</strong></p>
-                    <p>Votre email de connexion: <strong>laure.bonnevalle@3wa.io</strong></p>
+                    <p style="text-align: justify">Votre demande d'accès au site pour <strong>Nono</strong> a bien été enregistrée. Votre mot de passe temporaire est : <strong>o3dJ%lIOk2E3</strong></p>
+                    <p>Votre email de connexion: <strong>francois@oubli.fr</strong></p>
                     <p style="color: #FF33FF; font-size: 18px;">Votre compte n'est pas encore activé. Vous devez vous connecter et modifier votre mot de passe pour activer votre compte.</p>
                     <p>Respectez bien les majuscules et les minuscules.<br />
                     </p>
